Редактирование env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-DEBUG=True
-SECRET_KEY=insert-your-secret-key-here
-DATABASE_URL=insert-your-database-url-here
-EMAIL_HOST_USER=insert-your-email-here
-EMAIL_HOST_PASSWORD=insert-your-email-password-here
+SECRET_KEY= Введите секретный ключ Джанго
+
+DATABASE_URL=Введите путь к базе данных
+
+EMAIL_HOST_PASSWORD=Введите пароль от почты
+
+EMAIL_HOST=Введите хост от почты
+
+EMAIL_PORT=Введите порт от почты
+
+EMAIL_HOST_USER=Введите ваш email
+
+DEBUG=Режим Debug
