--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ EMAIL_PORT=Введите порт от почты
 EMAIL_HOST_USER=Введите ваш email
 
 DEBUG=Режим Debug
+
+TELEGRAM_BOT_TOKEN=<ваш_токен_бота>
+YOUR_PERSONAL_CHAT_ID=<ваш_чат_айди>
